--- a/views/header.ejs
+++ b/views/header.ejs
@@ -26,7 +26,7 @@
        <div class="user">
          <ul>
            <a href="#"><li><i class="fa-regular fa-heart"></i></li></a>
-           <a href="addCartPro"><li><i class="fa-solid fa-cart-plus"></i><p class="cart-count"><%=cartDB.length%></p></li></a>
+           <a href="addCartPro"><li><i class="fa-solid fa-cart-plus"></i><p class="cart-count"></p></li></a>
            <%if(loginState){%>
               <div class="loginTrue"><p>이</p></div>&nbsp;&nbsp;
               <li><button class="enter" onclick="location.href='logout'">로그아웃</button></li>
